@@ -47,7 +47,6 @@ pp.query("allow_negative_energy", allow_negative_energy);
 pp.query("allow_small_energy", allow_small_energy);
 pp.query("do_sponge", do_sponge);
 pp.query("sponge_implicit", sponge_implicit);
-pp.query("keep_sources_until_end", keep_sources_until_end);
 pp.query("source_term_predictor", source_term_predictor);
 pp.query("first_order_hydro", first_order_hydro);
 pp.query("xl_ext_bc_type", xl_ext_bc_type);
